Some homepage social spacing fixes. Fixes #85.

--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -800,6 +800,7 @@ header.home-header {
 		padding-bottom: 44px;
 		color: white;
 		font-size: 1.2em;
+		line-height: 1.5em !important;
 		font-weight: normal;
 		text-align: center;
 	}
@@ -809,6 +810,7 @@ header.home-header {
 		margin-top: 38px;
 		color: white;
 		font-size: 16px;
+		line-height: 1.5em !important;
 		font-weight: 400;
 		text-align: center;
 		a {
@@ -891,7 +893,7 @@ header.home-header {
 		h4 {
 			width: 80%;
 			margin: 0 auto;
-			padding-top: 12px;
+			padding-top: 42px;
 			padding-bottom: 8px;
 			font-size: 18px;
 			line-height: 1.4;
